# torel

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/torel/: Cargo.toml
crates/torel/src/: main.rs
crates/torel_ast/: Cargo.toml
crates/torel_ast/src/: lib.rs
crates/torel_backend/: Cargo.toml
crates/torel_backend/src/: lib.rs
crates/torel_codegen/: Cargo.toml
crates/torel_codegen/src/: lib.rs
crates/torel_codegen_c/: Cargo.toml
crates/torel_codegen_c/src/: lib.rs
crates/torel_codegen_llvm/: Cargo.toml  README.md
crates/torel_codegen_llvm/cpp/: CMakeLists.txt
crates/torel_codegen_llvm/cpp/include/: torel_llvm_backend.h
crates/torel_codegen_llvm/cpp/src/: backend_api.cpp  backend_internal.h  control_flow_emitter.cpp  error.cpp  expression_emitter.cpp  function_emitter.cpp  llvm_verifier.cpp  mir_decoder.cpp  module_emitter.cpp  runtime_calls.cpp  type_mapper.cpp
crates/torel_codegen_llvm/src/: lib.rs
crates/torel_diagnostics/: Cargo.toml
crates/torel_diagnostics/src/: lib.rs
crates/torel_effects/: Cargo.toml
crates/torel_effects/src/: lib.rs
crates/torel_ir/: Cargo.toml
crates/torel_ir/src/: lib.rs
crates/torel_lexer/: Cargo.toml
crates/torel_lexer/src/: lib.rs
crates/torel_mir/: Cargo.toml
crates/torel_mir/src/: lib.rs  lower.rs
crates/torel_ownership/: Cargo.toml
crates/torel_ownership/src/: lib.rs
crates/torel_parse/: Cargo.toml
crates/torel_parse/src/: lib.rs
crates/torel_parse/tests/: fixtures.rs
crates/torel_session/: Cargo.toml
crates/torel_session/src/: lib.rs
crates/torel_typeck/: Cargo.toml
crates/torel_typeck/src/: lib.rs
crates/torelc/: Cargo.toml
crates/torelc/src/: main.rs
crates/torelc/tests/: golden.rs
docs/architecture/: backend.md  compiler-pipeline.md  compiler-stage-ownership.md  cpp-engine-room.md  llvm-backend.md  mir-validation.md  mir.md  object-linking.md  runtime-abi.md  rust-cpp-boundary.md  target-platform.md  unsupported-backend-features.md
docs/specs/: TOREL_Language_Spec_v0.2.md
examples/: hello.torel
runtime/torel_runtime/include/: torel_runtime.h
runtime/torel_runtime/src/: torel_runtime.cpp
tests/fixtures/: README.md  hello.torel  minimal_unit.torel
tests/fixtures/invalid/: arg_count_mismatch.torel  arg_type_mismatch.torel  assign_to_fix.torel  assign_to_value_path.torel  assign_type_mismatch.torel  assign_unknown_local.torel  bad_return_type.torel  branch_local_does_not_escape.torel  break_outside_loop.torel  continue_outside_loop.torel  duplicate_local.torel  final_expr_branch_mismatch.torel  final_expr_missing_else.torel  final_expr_type_mismatch.torel  fix_type_mismatch.torel  if_condition_not_bool.torel  if_missing_else_return.torel  if_one_branch_missing_return.torel  loop_local_does_not_escape.torel  missing_return.torel  not_callable.torel  operator_add_bool_int.torel  operator_add_exit.torel  operator_and_int_bool.torel  operator_compare_bool.torel  operator_eq_mismatch.torel  operator_neg_bool.torel  operator_not_int.torel  operator_precedence_type_error.torel  proc_used_as_value.torel  return_literal_mismatch.torel  statement_after_final_expr.torel  trailing_junk.torel  unknown_local.torel  unknown_proc_call.torel  unknown_return_type.torel  unknown_return_value.torel  unreachable_after_break.torel  unreachable_after_continue.torel  unreachable_after_diverging_loop.torel  (+3 more)
tests/fixtures/valid/: call_no_args.torel  call_with_arg.torel  final_expr_binary_expr.torel  final_expr_call.torel  final_expr_if.torel  final_expr_if_with_returns.torel  final_expr_int.torel  final_expr_local.torel  fix_call_arg.torel  fix_int_return.torel  if_assign_slot.torel  if_comparison_condition.torel  if_else_return_int.torel  if_local_bool_condition.torel  loop_break_then_tail.torel  loop_continue_diverges.torel  loop_return.torel  operator_add_int.torel  operator_bool_logic.torel  operator_comparison.torel  operator_parentheses.torel  operator_precedence.torel  operator_unary_minus.torel  operator_unary_not.torel  return_bool_literal.torel  return_int_literal.torel  return_param.torel  return_text_literal.torel  slot_assign_binary_expr.torel  slot_assign_bool.torel  slot_assign_from_call.torel  slot_assign_int.torel  while_assign_counter.torel  while_continue.torel
tests/golden/: hello.ast.txt  hello.check.txt  hello.hir.txt  hello.mir.txt  hello.tokens.txt  operator_precedence.ast.txt  operator_precedence.hir.txt
