[package]
name = "torel_typeck"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
torel_ast.workspace = true
torel_diagnostics.workspace = true
torel_ir.workspace = true

[dev-dependencies]
torel_lexer.workspace = true
torel_parse.workspace = true
