[package]
name = "torelc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
torel_codegen.workspace = true
torel_effects.workspace = true
torel_ir.workspace = true
torel_lexer.workspace = true
torel_ownership.workspace = true
torel_parse.workspace = true
torel_typeck.workspace = true
thiserror.workspace = true
